--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -155,13 +155,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="iin-hR-lyG"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Entry Details" id="kaA-gv-wGj">
-                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="ZYh-ot-Lqj">
-                            <connections>
-                                <action selector="editButton:" destination="Wmq-BZ-BNv" id="iAc-6X-vgG"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Entry Details" id="kaA-gv-wGj"/>
                     <connections>
                         <outlet property="moodSegmentedControl" destination="ony-pq-Zyp" id="JWF-m2-RzR"/>
                         <outlet property="notesTextView" destination="vaI-fS-ue8" id="EBf-fa-rcq"/>
