set up journal detail view and passing info over; segmentedControl now setting color by mood with the detailView getting set as data is passed; still no delete of cell or complete editing

--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -33,6 +33,9 @@
                                                     <segment title="Dejected"/>
                                                     <segment title="Meh"/>
                                                 </segments>
+                                                <connections>
+                                                    <action selector="sControl:" destination="BYZ-38-t0r" eventType="valueChanged" id="ifO-rF-2Ol"/>
+                                                </connections>
                                             </segmentedControl>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ENTRY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mW4-op-s5D">
                                                 <rect key="frame" x="0.0" y="39" width="398" height="20.5"/>
@@ -203,6 +206,9 @@
                                                             <segment title="Dejected"/>
                                                             <segment title="Meh"/>
                                                         </segments>
+                                                        <connections>
+                                                            <action selector="sControl:" destination="SSz-pw-egY" eventType="valueChanged" id="YKM-mb-hfZ"/>
+                                                        </connections>
                                                     </segmentedControl>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r5v-VH-3uJ">
                                                         <rect key="frame" x="0.0" y="55" width="374" height="20.5"/>
@@ -214,7 +220,7 @@
                                             </stackView>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Pht-sk-RaV">
                                                 <rect key="frame" x="0.0" y="83.5" width="374" height="128"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
